Replaced removed express.configure and express.bodyParser with the connect library versions

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.0.0",
     "node-gcm": "^0.9.10",
     "http": "0.0.0",
-    "logfmt": "^1.1.2"
+    "logfmt": "^1.1.2",
+    "connect": "^2.14.4"
   }
 }
